# src/core/presentation/controllers/order-http-controller.ts
@@ -99,3 +99,26 @@ export class CheckOrderIsPaidHttpController
     }
   }
 }
+
+export class MercadoPagoWebhookHttpController implements HttpController<void> {
+  constructor(private readonly updateOrder: UpdateOrder) {}
+
+  async handle(request: HttpRequest): Promise<HttpResponse<void>> {
+    const { id } = request.params;
+    const { status } = request.body;
+
+    if (!status) {
+      throw new BadRequestError('Missing status');
+    }
+
+    try {
+      const paid = status === 'approved';
+      await this.updateOrder.updateOneById(id, { paid });
+      return HttpResponse.noContent();
+    } catch (error) {
+      if (error instanceof FindOneOrderByIdError)
+        throw new BadRequestError('Order not found');
+      throw error;
+    }
+  }
+}
