# src/main/routes/order-routes.ts
@@ -4,12 +4,17 @@ import {
   makeAddOneOrderHttpController,
   makeCheckOrderIsPaidHttpController,
   makeFindOrdersHttpController,
+  makeMercadoPagoWebhookHttpController,
   makeUpdateOrderStatusHttpController,
 } from '../factories/order-factories';
 import { adaptRoute } from './route';
 
 export const orderRoutes = (router: Router, repository: Repository) => {
   router.post('/orders', adaptRoute(makeAddOneOrderHttpController(repository)));
+  router.post(
+    '/orders/:id/hooks/mercado-pago',
+    adaptRoute(makeMercadoPagoWebhookHttpController(repository)),
+  );
   router.get('/orders', adaptRoute(makeFindOrdersHttpController(repository)));
   router.get(
     '/orders/:id/paid',
